Added repeat option to text-to-speech endpoint
